@@ -1,5 +1,7 @@
 # Head
 
+- named_references_to_keep and named_references_that_can_be_set_at_runtime can now be passed a block which will be called with each named reference. Returning true will make the named reference kept / settable
+
 # 0.2.4 - 2013 January 13th
 
 - Now checks whether sheet names and named references provided by the user actually exist, and if not, aborts
